--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
+  implementation 'org.springframework.security:spring-security-crypto'
   runtimeOnly 'com.h2database:h2'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
