[refactor] 코드리뷰 반영

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ logging:
         auctionhub:
           repository:
             mybatis: trace
+    root: debug
 
 mybatis:
   type-aliases-package: com.flab.auctionhub.domain
