[feature] 회원 도메인 테스트코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ jacocoTestReport {
     csv.required = false
     html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
   }
+  finalizedBy jacocoTestCoverageVerification
 }
 
 jacocoTestCoverageVerification {
