--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
   runtimeOnly 'com.h2database:h2'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
+  testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '2.2.0'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
