[refactor] jacoco 설정 변경

--- a/build.gradle
+++ b/build.gradle
@@ -74,15 +74,24 @@ jacocoTestReport {
 jacocoTestCoverageVerification {
   violationRules {
     rule {
-      enabled = false
+      enabled = true
       element = 'CLASS'
-      includes = ['org.gradle.*']
+//      includes = ['org.gradle.*']
 
       limit {
         counter = 'LINE'
-        value = 'TOTALCOUNT'
-        maximum = 0.7
+        value = 'COVEREDRATIO'
+        minimum = 0.70
       }
+
+      excludes = [
+          '**.*Dto*',
+          '**.*Config*',
+          '**.*Exception*',
+          '**.*Response*',
+          '**.*Request*',
+          '**.*Application*',
+      ]
     }
   }
 }
