[refactor] jacoco 설정 변경

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ jacocoTestCoverageVerification {
           '**.*Response*',
           '**.*Request*',
           '**.*Application*',
+          '**.*Handler*',
       ]
     }
   }
