[feature] 프로필별 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,25 @@
-# H2 local 환경
+spring:
+  profiles:
+    group:
+      dev: common, local
+      test: common, test
+      prod: prod
+---
+# H2 common 환경
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: common
   datasource:
     url: jdbc:h2:tcp://localhost/~/test;MODE=MYSQL;NON_KEYWORDS=USER,ORDER
     driver-class-name: org.h2.Driver
     username: sa
     password:
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       path: /h2-console
-  sql:
-    init:
-      mode: always
 
 logging:
   level:
@@ -43,8 +39,34 @@ mybatis:
   type-handlers-package: com.flab.auctionhub.hadler
 
 ---
+# H2 local 환경
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  sql:
+    init:
+      schema-locations: classpath*:schema.sql
+      data-locations: classpath*:data.sql
+      mode: always
+
+---
+# H2 test 환경
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  sql:
+    init:
+      schema-locations: classpath*:schema.sql
+      data-locations: classpath*:data-test.sql
+      mode: always
+
+---
 # MySQL dev 환경
 spring:
   config:
     activate:
-      on-profile: dev
+      on-profile: prod
