--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
   implementation 'org.springframework.security:spring-security-crypto'
+  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+  implementation 'org.springframework.session:spring-session-data-redis'
   runtimeOnly 'com.h2database:h2'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
