--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,13 @@ spring:
       enabled: true
       path: /h2-console
 
+  redis:
+    host: localhost
+    port: 6379
+
+    session:
+      store-type: redis
+
 logging:
   level:
     org.hibernate.SQL: debug
