[refactor] 테스트 코드 리팩토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,7 +68,7 @@ spring:
   sql:
     init:
       schema-locations: classpath*:schema.sql
-      data-locations: classpath*:data-test.sql
+      data-locations: ""
       mode: always
 
 ---
