[feature] 로그인 체크 기능

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ jacocoTestCoverageVerification {
       limit {
         counter = 'LINE'
         value = 'COVEREDRATIO'
-        minimum = 0.70
+        minimum = 0.80
       }
 
       excludes = [
@@ -94,6 +94,7 @@ jacocoTestCoverageVerification {
           '**.*Request*',
           '**.*Application*',
           '**.*Handler*',
+          '**.*Interceptor*',
       ]
     }
   }
