[feature] created_by 컬럼 수정에 따른 이슈 수정

--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,7 @@ jacocoTestCoverageVerification {
           '**.*Application*',
           '**.*Handler*',
           '**.*Interceptor*',
+          '**.*Auditor*',
       ]
     }
   }
