--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ jacocoTestCoverageVerification {
           '**.*Handler*',
           '**.*Interceptor*',
           '**.*Auditor*',
+          '**.*Redis*',
       ]
     }
   }
