--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,11 +22,13 @@ spring:
       path: /h2-console
 
   redis:
-    host: localhost
-    port: 6379
-
     session:
       store-type: redis
+      host: 127.0.0.1
+      port: 6379
+    cache:
+      host: 127.0.0.1
+      port: 6380
 
 logging:
   level:
