[feature] 대용량 트래픽 처리를 위한 메시지큐 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,6 +60,12 @@ spring:
       data-locations: classpath*:data.sql
       mode: always
 
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
 ---
 # H2 test 환경
 spring:
