--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-redis'
   implementation 'org.springframework.session:spring-session-data-redis'
   implementation 'org.springframework.boot:spring-boot-starter-websocket'
+  implementation 'org.springframework.boot:spring-boot-starter-amqp'
   runtimeOnly 'com.h2database:h2'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
@@ -95,6 +96,7 @@ jacocoTestCoverageVerification {
           '**.*Request*',
           '**.*Application*',
           '**.*Handler*',
+          '**.*Bid*',
           '**.*Interceptor*',
           '**.*Auditor*',
           '**.*Redis*',
